--- a/index.html
+++ b/index.html
@@ -14,6 +14,19 @@
       integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
       crossorigin="anonymous"
     />
+    <style>
+      body {
+        background-color: #0093e9;
+        background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
+        background-size: cover;
+        min-height: 100vh;
+      }
+
+      .container {
+        display: flex;
+        margin-top: 50px;
+      }
+    </style>
     <title>Task List</title>
   </head>
   <body>
